[package]
name = "collectd-http-receiver"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP server framework
axum = "0.7"

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async utilities
tokio-util = "0.7"

# Better error handling
anyhow = "1.0"

# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Command line argument parsing
clap = { version = "4.0", features = ["derive"] }

# Note: Async file I/O is built into tokio